--- a/inst/marketing/tools/app/about.Rmd
+++ b/inst/marketing/tools/app/about.Rmd
@@ -9,3 +9,13 @@ Built using <a href="http://www.rstudio.com/shiny/" target="_blank">Shiny</a> by
 Code available on <a href="https://github.com/mostly-harmless/radiant" target="_blank">GitHub</a>
 
 `r sprintf("Dependencies for local use: %s", paste0(libs, collapse = ", "))`
+
+## License
+
+The Radiant package is licensed under the [AGPLv3](http://www.tldrlegal.com/l/AGPL3). The help files are licensed under the creative commons attribution non-commercial license [CC-NC-SA](http://www.tldrlegal.com/license/creative-commons-attribution-noncommercial-sharealike-(cc-nc-sa)). 
+
+As a summary, the AGPLv3 license requires, attribution, include copyright and license in copies of the software, state changes if you modify the code, and disclose all source code. Details are in the COPYING file.
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
+
+&copy; Vincent Nijs (2014)
